need fix nav spacing

--- a/app/assets/stylesheets/01-session.css
+++ b/app/assets/stylesheets/01-session.css
@@ -100,7 +100,7 @@ h5.input-error{
     margin-top: 0px;
     font-family: 'Lato', sans-serif;
     font-weight:520;
-    font-size: 0.8em;
+    font-size: 0.9em;
     
 }
 
